# pye1

./: Makefile.am  Makefile.cvs  Makefile.in  PinYinUserGuideCN.md  ProjectHome.md  PyeUserGuideCN.md  autogen.sh  config.h.in  configure  configure.in  pye.pc.in
engine/: Makefile.am  Makefile.in  abstract_phrase.h  dynamic_phrase.cc  dynamic_phrase.h  global.h  output.h  phrase_manager.cc  phrase_manager.h  pinyin_editor.cc  pinyin_editor.h  pinyin_parser.cc  pinyin_parser.h  pye_global.h  pye_output.h  pye_wrapper.cc  pye_wrapper.h  system_phrase.cc  system_phrase.h  user_phrase.cc  user_phrase.h  wrapper.cc  wrapper.h
test/: Makefile.am  Makefile.in  test.cc
tools/: Makefile.am  Makefile.in  mb_creater.cc  mb_creater.h  pye_create_mb.cc  pye_create_umb.cc  pye_parse_umb.cc  umb_creater.cc  umb_creater.h  umb_parser.cc  umb_parser.h
