#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.65)
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(pye, 0.2.0)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS(fcntl.h stdint.h stdlib.h string.h unistd.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS(bzero memmove strcspn strdup strerror strspn)

AC_ARG_ENABLE([message], AS_HELP_STRING([--disable-message],[disable print message]),
              [enable_message=$enableval], [enable_message=yes])
if test "x${enable_message}" = "xyes" ; then
  AC_DEFINE(MESSAGE, 1, [Define if you want to print message])
fi
AC_ARG_ENABLE([warning], AS_HELP_STRING([--disable-warning], [disable print warning]),
              [enable_warning=$enableval], [enable_warning=yes])
if test "x${enable_warning}" = "xyes" ; then
  AC_DEFINE(WARNING, 1, [Define if you want to print warning])
fi
AC_ARG_ENABLE([trace], AS_HELP_STRING([--enable-trace], [enable print trace]),
              [enable_trace=$enableval], [enable_trace=no])
if test "x${enable_trace}" = "xyes" ; then
  AC_DEFINE(TRACE, 1, [Define if you want to print trace])
fi

dnl Add the languages which your application supports here.

AC_OUTPUT(pye.pc Makefile engine/Makefile test/Makefile tools/Makefile)
